# yaoota_task

./: .env.example  .gitignore  README.md  api.http  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pname/users/: admin.py  apps.py  forms.py  urls.py  views.py
pname/users/api/: views.py
project/: settings.py  urls.py
templates/: base.html  home.html
templates/registration/: signup.html
yaoota_task/nid/: apps.py
yaoota_task/nid/api/: serializers.py  urls.py  utils.py  views.py
yaoota_task/nid/tests/test_api/: test_serializers.py  test_views.py
yaoota_task/users/: apps.py  models.py
yaoota_task/users/api/: urls.py
yaoota_task/users/migrations/: 0001_initial.py
yaoota_task/users/tests/: test_models.py
